Development
1.0.7
    Hide media info when running as a plugin, caused problems with plugger testing grounds site
	Fix issue #647, config_volume not defined when --without-alsa option is used (code may need to be cleaned up)
	Fix issue #646, media is not positioned and sized correctly when remember preference is set
1.0.7b
    Updated Czech translation
	Increase the channel parsing buffer, need to rewrite parseChannels
    Updated Polish translation
    Update Portuguese translation
    Refresh po files 
    Add in support for the anamorphic aspect ratio (2.39:1)
	Some minor fixes to the dbus interface
	Add uk and ru translation patches
	Fix randomization of first file in playlist
	Add in y, g, and J hotkeys to match mplayer hotkeys
	Add stored DVD device to drop down if not detected by gio, workaround RedHat Bug #850402
    Change idledata->device to mplayer_dvd_device may fix problem with dvd device being forgotten
    Fix dconf configuration file
    Don't enable MPRIS in plugin mode
    Basic scrolling wheel patch from Issue #621
	Clean up Issue #629, warning by cppcheck
	Fix some German translations by Wolfgang Knauf
	Fix some compiler errors noticed by Wolfgang Knauf
	Clean up log message if volume is not updated yet
    Remove resize handle from fullscreen and plugin windows
    Change g_strcasecmp to g_ascii_strcasecmp to clean up complier warnings
    Handle the new error message from gmtk-media-player
    Allow musicbrainz to be searched by artist only
    Bump configure.in to require gmtk 1.0.7 or higher (due to gm_log changes)
    Change some log levels in get_cover_art
    Fix logic in shutdown and cancel volume update callback
    Fix a hang on startup when getting volume from pulseaudio (has something to due with GTK event queue and gtk_main not called
    Make cover art scaling consistent
    Move various global variables to file-local (static)
    Clean up the title bar name display