@@ -7726,15 +7726,33 @@ GtkWidget *create_window(gint windowid)
     gtk_container_add(GTK_CONTAINER(window), vbox_master);
     icon_theme = gtk_icon_theme_get_default();
 #ifdef GTK3_ENABLED
-    image_play = gtk_image_new_from_icon_name("media-playback-start-symbolic", button_size);
-    image_stop = gtk_image_new_from_icon_name("media-playback-stop-symbolic", button_size);
-    image_pause = gtk_image_new_from_icon_name("media-playback-pause-symbolic", button_size);
-    image_ff = gtk_image_new_from_icon_name("media-seek-forward-symbolic", button_size);
-    image_rew = gtk_image_new_from_icon_name("media-seek-backward-symbolic", button_size);
-    image_prev = gtk_image_new_from_icon_name("media-skip-backward-symbolic", button_size);
-    image_next = gtk_image_new_from_icon_name("media-skip-forward-symbolic", button_size);
-    image_menu = gtk_image_new_from_icon_name("view-sidebar-symbolic", button_size);
-    image_fs = gtk_image_new_from_icon_name("view-fullscreen-symbolic", button_size);
+    if (gtk_icon_theme_has_icon(icon_theme, "media-playback-start-symbolic") &&
+        gtk_icon_theme_has_icon(icon_theme, "media-playback-stop-symbolic") &&
+        gtk_icon_theme_has_icon(icon_theme, "media-playback-pause-symbolic") &&
+        gtk_icon_theme_has_icon(icon_theme, "media-seek-forward-symbolic") &&
+        gtk_icon_theme_has_icon(icon_theme, "media-seek-backward-symbolic") &&
+        gtk_icon_theme_has_icon(icon_theme, "view-sidebar-symbolic") &&
+        gtk_icon_theme_has_icon(icon_theme, "view-fullscreen-symbolic")) {
+        image_play = gtk_image_new_from_icon_name("media-playback-start-symbolic", button_size);
+        image_stop = gtk_image_new_from_icon_name("media-playback-stop-symbolic", button_size);
+        image_pause = gtk_image_new_from_icon_name("media-playback-pause-symbolic", button_size);
+        image_ff = gtk_image_new_from_icon_name("media-seek-forward-symbolic", button_size);
+        image_rew = gtk_image_new_from_icon_name("media-seek-backward-symbolic", button_size);
+        image_prev = gtk_image_new_from_icon_name("media-skip-backward-symbolic", button_size);
+        image_next = gtk_image_new_from_icon_name("media-skip-forward-symbolic", button_size);
+        image_menu = gtk_image_new_from_icon_name("view-sidebar-symbolic", button_size);
+        image_fs = gtk_image_new_from_icon_name("view-fullscreen-symbolic", button_size);
+    } else {
+        image_play = gtk_image_new_from_stock(GTK_STOCK_MEDIA_PLAY, button_size);
+        image_stop = gtk_image_new_from_stock(GTK_STOCK_MEDIA_STOP, button_size);
+        image_pause = gtk_image_new_from_stock(GTK_STOCK_MEDIA_PAUSE, button_size);
+        image_ff = gtk_image_new_from_stock(GTK_STOCK_MEDIA_FORWARD, button_size);
+        image_rew = gtk_image_new_from_stock(GTK_STOCK_MEDIA_REWIND, button_size);
+        image_prev = gtk_image_new_from_stock(GTK_STOCK_MEDIA_PREVIOUS, button_size);
+        image_next = gtk_image_new_from_stock(GTK_STOCK_MEDIA_NEXT, button_size);
+        image_menu = gtk_image_new_from_stock(GTK_STOCK_INDEX, button_size);
+        image_fs = gtk_image_new_from_stock(GTK_STOCK_FULLSCREEN, button_size);
+    }
 #else
     image_play = gtk_image_new_from_stock(GTK_STOCK_MEDIA_PLAY, button_size);
     image_stop = gtk_image_new_from_stock(GTK_STOCK_MEDIA_STOP, button_size);
